bootstrap plugged in

--- a/client/app/templates/contact.hbs
+++ b/client/app/templates/contact.hbs
@@ -1,16 +1,14 @@
-<p>Super Rentals Representatives would love to help you choose a destination or answer
-any questions you may have.</p>
-
-<p>Contact us today:</p>
-
-<p>
-  Super Rentals HQ<br>
-  1212 Test Address Avenue<br>
-  Testington, OR 97233
-</p>
-
-<p>(503)555-1212</p>
-
-<p>superrentalsrep@superrentals.com</p>
-
-{{#link-to "about"}}About{{/link-to}}
+<h1>Contact</h1>
+<form>
+  <div class="form-group">
+    <label for="inputEmail">Email address</label>
+    <input type="email" class="form-control" id="inputEmail"
+      placeholder="Email">
+  </div>
+  <div class="form-group">
+    <label for="inputComments">Comments</label>
+    <textarea class="form-control" id="inputComments"
+      placeholder="Comments"></textarea>
+  </div>
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
