--- a/client/app/templates/about.hbs
+++ b/client/app/templates/about.hbs
@@ -1,7 +1,18 @@
-<h2>About Super Rentals</h2>
-
-<p>The Super Rentals website is a delightful project created to explore Ember.
-By building a property rental site, we can simultaneously imagine traveling
-AND building Ember applications.</p>
-
-{{#link-to "contact"}}Click here to contact us.{{/link-to}}
+<h1>About</h1>
+<p>Ember basic components</p>
+<ul class="list-group">
+  <li class="list-group-item">Route</li>
+  <li class="list-group-item">Model</li>
+  <li class="list-group-item">View</li>
+  <li class="list-group-item">Template</li>
+  <li class="list-group-item">Controller?</li>
+</ul>
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">Ember 2.0 is comming</h3>
+  </div>
+  <div class="panel-body">
+    <p>The next version of ember will continue
+    to improve the way we create web applications</p>
+  </div>
+</div>
