--- a/client/app/templates/application.hbs
+++ b/client/app/templates/application.hbs
@@ -1,1 +1,47 @@
-{{outlet}}
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-collapse">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      {{ link-to 'AEL Game' 'index' class="navbar-brand" }}
+    </div>
+    <div class="collapse navbar-collapse" id="menu-collapse">
+      <ul class="nav navbar-nav">
+        <li>{{ link-to 'About' 'about' }}</li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Social Media <b class="caret"></b></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Twitter</a></li>
+            <li><a href="#">Instagram</a></li>
+          </ul>
+        </li>
+        <li>{{ link-to 'Contact' 'contact' }}</li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="container">
+  <div class="jumbotron text-center">
+    <h1>Welcome to AEL game</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nec turpis vel neque auctor congue eu eu justo. Nunc non bibendum augue, viverra lacinia ex. Aenean faucibus dui non placerat molestie. Vivamus vel ligula nibh. Sed quis sapien elit. Nunc porta elit nisl, at imperdiet mi dapibus ut. Nullam pulvinar dictum velit, eget feugiat orci tempor sed. Quisque id rutrum est, quis accumsan turpis.</p>
+
+    <a class="btn btn-default">Watch now!</a>
+    <a class="btn btn-info">Share it to your friends!</a>
+  </div>
+</div>
+
+<div class="container">
+  {{outlet}}
+</div>
+
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+    <p class="navbar-text pull-left">Site Built by Stavros Zavrakas</p>
+    <a href="#" class="navbar-btn btn btn-primary pull-right">Like us on Facebook</a>
+  </div>
+</nav>
