--- a/client/app/templates/index.hbs
+++ b/client/app/templates/index.hbs
@@ -1,10 +1,14 @@
-<h1>Welcome to Super Rentals</h1>
+<h1>Welcome to AEL game</h1>
 
-<p>We hope you find exactly what you're looking for in a place to stay.</p>
+<div class="row">
+  <div class="col-md-6">
+    <a href="http://emberjs.com/" target="_blank">EmberJS</a>
+  </div>
+  <div class="col-md-6">
+    <a href="http://getbootstrap.com/" target="_blank">Bootstrap</a>
+  </div>
+</div>
 
 {{#each model as |gameUnit|}}
   {{games-listing game=gameUnit}}
 {{/each}}
-
-{{#link-to "about"}}About{{/link-to}}
-{{#link-to "contact"}}Click here to contact us.{{/link-to}}
